--- a/src/app/(default)/games/[game_id]/config/_components/ConfigLimit/ConfigLimit.module.css
+++ b/src/app/(default)/games/[game_id]/config/_components/ConfigLimit/ConfigLimit.module.css
@@ -6,8 +6,14 @@
   gap: 1rem;
   margin: 1rem 0;
   padding: 1rem;
+  background-color: var(--mantine-color-white);
   border: 1px solid var(--mantine-color-default-border);
   border-radius: var(--mantine-radius-default);
+
+  @mixin dark {
+    background-color: var(--mantine-color-gray-);
+    border-color: var(--mantine-color-gray-7);
+  }
 
   @mixin larger-than 62em {
     flex-direction: row;
