--- a/src/app/(default)/layout.module.css
+++ b/src/app/(default)/layout.module.css
@@ -20,7 +20,6 @@
 .main {
   width: 100%;
   margin: 0 auto;
-  margin-bottom: 5rem;
   padding: 1rem;
 
   @mixin larger-than 62em {
